<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
...
                    android:text="Event Title"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_create_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_radius"
                    android:paddingVertical="10dp"
                    android:paddingStart="20dp"
...
                    android:text="Location"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_create_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_radius"
                    android:drawableEnd="@drawable/ic_location_on_24dp_000000_fill0_wght400_grad0_opsz24"
                    android:paddingVertical="10dp"
...
                    android:text="Capacity Limit"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_size_subtitle"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_create_event_capacity"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_radius"
                    android:gravity="center"
                    android:paddingVertical="6dp"
                    android:textColor="@color/black"
...
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/tv_registration_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/rounded_sm"
                            android:backgroundTint="@color/text_tertiary"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp"
                            android:text="00:00 AM"
                            android:textColor="@color/text_primary"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_registration_start_Date"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_registration_start_Date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/tv_registration_end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/rounded_sm"
                            android:backgroundTint="@color/text_tertiary"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="4dp"
                            android:text="00:00 AM"
                            android:textColor="@color/text_primary"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tv_registration_end_date"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_registration_end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeWidth="0dp"
                    tools:ignore="MissingConstraints">

                    <EditText
                        android:id="@+id/et_create_event_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:hint="Enter description..."
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/black"
...
                android:scaleType="fitCenter"
                android:src="@drawable/ic_upload_24dp_000000_fill0_wght400_grad0_opsz24"
                app:tint="@color/text_secondary" />


            <TextView
                android:id="@+id/btn_create_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingVertical="10dp"
                android:background="@drawable/rounded_md"
                android:backgroundTint="@color/black"
...
