<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

   <LinearLayout
       android:layout_width="match_parent"
...
                       android:layout_weight="1"
                       android:text="Require Geolocation"
                       android:textColor="@color/black"
                       android:textSize="@dimen/text_size_body" />

                   <com.google.android.material.switchmaterial.SwitchMaterial
                       android:id="@+id/switch_event_geolocation_required"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:checked="true" />
               </LinearLayout>

               <com.google.android.material.chip.ChipGroup
                   android:id="@+id/chip_group_entrant_status"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp"
                   app:singleSelection="true">

                   <com.google.android.material.chip.Chip
                       android:id="@+id/chip_all_entrants"
                       style="@style/Widget.MaterialComponents.Chip.Choice"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="All"
                       android:checked="true" />

                   <com.google.android.material.chip.Chip
                       android:id="@+id/chip_waiting_list"
                       style="@style/Widget.MaterialComponents.Chip.Choice"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Waiting List" />

               </com.google.android.material.chip.ChipGroup>

               <fragment
                   android:id="@+id/map"
                   android:name="com.google.android.gms.maps.SupportMapFragment"
                   android:layout_width="match_parent"
                   android:layout_height="300dp" />


           </LinearLayout>
...
