...
                            android:textSize="12sp"/>

                    </LinearLayout>

<!--                    export btn-->
                    <LinearLayout
                        android:id="@+id/btn_export"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_sm"
                        android:backgroundTint="@color/text_tertiary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="6dp"
...
